--- a/vignettes/wrapping-apis.Rmd
+++ b/vignettes/wrapping-apis.Rmd
@@ -449,10 +449,7 @@ nytimes_books <- function(api_key, path, ...) {
   request("https://api.nytimes.com/svc/books/v3") %>% 
     req_url_path_append("/reviews.json") %>% 
     req_url_query(..., `api-key` = api_key) %>% 
-    # JENNY COMMENT HERE
-    req_error(body = function(resp) {
-      resp %>% resp_body_json() %>% .$fault %>% .$faultstring
-    }) %>% 
+    req_error(body = nytimes_error_body) %>% 
     req_throttle(10 / 60, realm = "https://api.nytimes.com/svc/books") %>% 
     req_perform() %>% 
     resp_body_json()
@@ -533,8 +530,6 @@ A token is an alternative to a username and password.
 You have one username + password per site; you can have one token per use case.
 This lets each use case have a minimal set of permissions, and you can easily revoke one token without affecting any other use case.
 
-JENNY COMMENT HERE
-
 I created a personal access token specifically for this vignette that can only access gists, and, as in the last example, stored an encrypted version in this vignette:
 
 ```{r}
@@ -567,7 +562,10 @@ req %>% req_dry_run()
 
 Once you've got authentication working, it's always a good idea to work on errors next, since that will help you debug any failed requests.
 In my experience APIs rarely do a good job of documenting their errors, so you'll often have to do a little experimentation.
-Here I'll construct a deliberately malformed query and see what happens:
+To add to the pain, in large APIs different endpoints often return different amounts of information in different forms.
+You'll typically need to tackle your error handling iteratively, improving your code each time you encounter a new problem.
+
+While GitHub does [document its errors](https://docs.github.com/en/rest/overview/resources-in-the-rest-api#client-errors), I'm sufficiently distrustful that I still want to construct a deliberately malformed query and see what happens:
 
 ```{r, error = TRUE}
 resp <- request("https://api.github.com/gists") %>% 
@@ -576,9 +574,8 @@ resp <- request("https://api.github.com/gists") %>%
   req_perform()
 ```
 
-As expected, I get an HTTP error.
-But does the response contain any useful information?
-Let's take a look:
+As documented I get a 422 "Unprocessable Entity" error.
+But the response is rather different to documentation which suggests there should be a string `message` and a list of `errors`:
 
 ```{r}
 resp <- last_response()
@@ -586,8 +583,7 @@ resp
 resp %>% resp_body_json()
 ```
 
-That body looks pretty useful!
-So let's write a function that extracts the data and formats it for presentation to the user:
+I'll proceed anyway, writing a function that extracts the data and formats it for presentation to the user:
 
 ```{r}
 gist_error_body <- function(resp) {
@@ -740,14 +736,15 @@ req %>% req_perform()
 
 ## OAuth
 
-JENNY PEDANTIC COMMENT HERE
-
-If the API provides access to a website where the user already has an account (think Twitter, Instagram, Facebook, Google, GitHub, etc), it's likely to use OAuth to allow you to authenticate on behalf of the user.
-OAuth[^2] is an authentication framework that's designed so that you don't have to share your username and password with an app; instead the app asks for permission to use your account.
+If the API provides access to a website where the user already has an account (think Twitter, Instagram, Facebook, Google, GitHub, etc), it's likely to use OAuth to allow you to authorise on behalf of the user.
+OAuth[^2] is an authorisation framework that's designed so that you don't have to share your username and password with an app; instead the app asks for permission to use your account.
 You've almost certainly used this before on the web; it's used in most cases where one website wants to use another website on your behalf.
 
 [^2]: Here I'll only talk about OAuth 2.0 which is the only version in common use today.
     OAuth 1.0 is largely only of historical interest.
+
+OAuth is a broad framework that's has many many many different variants which makes it hard to provide generalisable advice.
+The following advice draws on my experience working with a number of OAuth using APIs, but don't be surprised if you need to do something slightly different for the API you're working with.
 
 ### Clients
 
@@ -755,12 +752,14 @@ The first step in working with any OAuth API is to create a client.
 This involves you registering for a developer account on the API's website and creating a new OAuth app.
 The process varies from API to API, but at the end of it you'll get a client id and in most cases a client secret.
 
-JENNY COMMENT HERE
+(You'll definitely need this for testing your package, and you'll probably also baked it into your package for the convenience of your users. Bundling the app is user friendly, but not always possible, particularly if rate limits are enforced on a per-app rather than per-user basis. You should always provide some way for the user to provide their own app.)
 
-If the API provides a way to authenticate without the client secret, you should leave it out of your package.
+If the API provides a way to authenticate your app without the client secret, you should leave it out of your package.
 But in most cases, you'll need to include the secret in the package.
-You can use `obfuscate()` to hide the secret; this is not bulletproof, but in most cases it'll be easier create a new client than try and steal yours.
-It is unusual for an OAuth client to be able to do anything in its own right, so even if someone does steal your secret there's not much harm they can do with it (generally the worst they can do is use up your rate limits).
+You can use `obfuscate()` to hide the secret; this is not bulletproof[^3], but in most cases it'll be easier create a new client than try and steal yours.
+Additionally, it's unusual for an OAuth client to be able to do anything in its own right, so even if someone does steal your secret there's not much harm they can do with it.
+
+[^3]: It uses `secret_encrypt()` with a special encryption key that's bundled with httr2.
 
 To obfuscate a secret, call `obfuscate()`:
 
@@ -804,7 +803,7 @@ This flow can't be used inside a vignette because it's designed specifically for
 Other flows provide different ways of getting the token:
 
 -   `req_oauth_client_credentials()` is used to allow the client to perform actions on its own behalf (instead of on behalf of some other user).
-    JENNY COMMENT HERE
+    This is typically need if you want to support **service accounts**, which are used in non-interactive environments.
 
 -   `req_oauth_device()` uses the "device" flow which is designed for devices like TVs that don't have an easy way to enter data.
     It also works well from the console.
